perf: SQL optimizations
(cherry picked from commit 6b93231fa8e3c2537d868a1e6ad9d58341c38164)